Fixed bug where collapsed navbar links wouldn't uncollapse on click + fixed bug where collapsed navbar took space even uncollapsed

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -72,7 +72,7 @@
 
 .buttonLink {
   display: flex;
-  padding-block: 10px;
+  padding-block: 8px;
   padding-inline: 20px;
   border-radius: 10px;
   color: white;
@@ -120,12 +120,15 @@
 
 .fadeIn {
   display: flex;
-  opacity: 0;
   opacity: 1;
   transition: 0.5s all;
 }
 
 .fadeOut {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
   opacity: 0;
   transition: 0.5s all;
   pointer-events: none;
